# ROS2-Tinkerkit-YOLO

tinkerkit_bringup/: CMakeLists.txt  package.xml
tinkerkit_bringup/launch/: real_robot_launch.py  simulated_robot.launch.py
tinkerkit_command/: CMakeLists.txt  package.xml
tinkerkit_command/src/: angle_conversion.cpp  approach_retreat.cpp  cartesian_path.cpp  hello_moveit.cpp  manipulation.cpp  move_group_interface_tutorial.cpp  pick_and_place.cpp  robotarm_controller.cpp
tinkerkit_controller/: CMakeLists.txt  package.xml  tinkerkit_controller.xml
tinkerkit_controller/config/: tinkerkit_controllers.yaml
tinkerkit_controller/include/tinkerkit_controller/: tinkerkit_interface.hpp
tinkerkit_controller/launch/: controller.launch.py  robot_arm_launch.py  slider_controller.launch.py
tinkerkit_controller/src/: robotarm_node.cpp  tinkerkit_interface.cpp
tinkerkit_controller/tinkerkit_controller/: slider_control.py
tinkerkit_description/: CMakeLists.txt  package.xml
tinkerkit_description/launch/: display.launch.py  spawn_tinkerkit.launch  spawn_tinkerkit_controller.launch
tinkerkit_description/rviz/: display.rviz
tinkerkit_description/urdf/: camera.xacro  gazebe_material.xacro  tinkerkit.urdf.xacro  tinkerkit_gazebo.xacro  tinkerkit_ros2_control.xacro
tinkerkit_detection/: package.xml  setup.cfg  setup.py
tinkerkit_detection/tinkerkit_detection/: TF_broadcaster.py  cam_pub.py  cam_sub.py  detect.py  fa.py  fake_object_publisher.py  object_tf2_publisher.py  position.py  testcode.py
tinkerkit_firmware/: CMakeLists.txt  package.xml
tinkerkit_firmware/tinkerkit_firmware/: simple_serial_transmitter.py
tinkerkit_moveit/: CMakeLists.txt  package.xml
tinkerkit_moveit/config/: initial_position.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  tinkerkit.srdf
tinkerkit_moveit/launch/: pick_and_place.cpp  test_trajectory.launch.py
tinkerkit_moveit/src/: hello_moveit.cpp  moveit_interface.cpp
tinkerkit_msgs/: CMakeLists.txt  package.xml
tinkerkit_msgs/srv/: Pose_Message.srv
tinkerkit_remote/: CMakeLists.txt  package.xml
tinkerkit_remote/src/: PickPlaceActionServer.cpp  approach_retreat.cpp  task_server.cpp
